# android_opencv

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/aos/opencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LoadYolov8.cpp  LoadYolov8.h  Result.h  native-lib.cpp  native-lib2.cpp
app/src/main/java/com/aos/opencv/: CameraActivity.java  CameraActivity2.java  ImageActivity.java  MainActivity.java
app/src/main/kotlin/com/aos/opencv/: Draw.kt  Inference.kt  Load.kt  Result.kt  Segment.kt
app/src/main/res/layout/: activity_camera.xml  activity_image.xml  activity_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/aos/opencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdk/java/src/org/opencv/android/: CameraBridgeViewBase.java
